# VideoTranscoder

./: CMakeLists.txt  build.sh  install_deps.sh  readme.md
include/: audio_sync.h  globals.h  speech_sync.h  transcoder.h
src/: audio_sync.cpp  main.cpp  speech_sync.cpp  speech_sync.h  transcoder.cpp
